<resources>
    <string name="app_name">Grocery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="price">price</string>
    <string name="image">image</string>
    <string name="enter_username">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="enter_first_name">enter firstName</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="logout">Logout</string>
    <string name="MainMenu">Menu</string>
    <string name="description">description</string>
    <string name="add_to_cart">add to cart</string>
    <string name="title_activity_cart">CartActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="cart">Cart</string>

    <string name="initial_text">0</string>
    <string name="no_items_in_cart">No Items In Cart!</string>
    <string name="grocery">Grocery</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="your_address">Your Address</string>
    <string name="subtotal">SubTotal</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="confirm_order">confirm order</string>
    <string name="shipping_to">Shipping to</string>
    <string name="delivery_to">Delivery to</string>
    <string name="items">Items</string>
    <string name="itemprice">ItemPrice</string>
    <string name="shipping_amp_handling"><![CDATA[Shipping & handling]]></string>
    <string name="promotion_applied">Promotion Applied</string>
    <string name="total_before_tax">Total before tax</string>
    <string name="estimated_tax">Estimated tax</string>
    <string name="order_total">Order Total</string>
    <string name="fresh">fresh</string>
    <string name="shop_aisles">Shop Aisles</string>
    <string name="reverse_a_time">Reverse a Time</string>
    <string name="title">title</string>
    <string name="enter_city">enter city</string>
    <string name="enter_house_number">enter houseNo</string>
    <string name="enter_pin_code">enter Pincode</string>
    <string name="enter_type">enter type</string>
    <string name="enter_street_name">enter streetName</string>
    <string name="add_address_1">Add address</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="user">User:</string>
    <string name="city">city:</string>
    <string name="houseno">houseNo:</string>
    <string name="pincode">pincode:</string>
    <string name="type">type:</string>
    <string name="product_title">product title</string>
    <string name="mrp_price">mrp_price</string>
    <string name="splash_screen">splash screen</string>
    <string name="product_image">product image</string>
    <string name="add_button">add button</string>
    <string name="minus_button">minus button</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="check_out">check out</string>
</resources>