<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_frame"
        >
        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:paddingTop="15dp"
            style="@style/CustomText2">

        </TextView>
        <TextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            style="@style/CustomText2">

        </TextView>
        <TextView
            android:id="@+id/text_houseNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/houseno"
            style="@style/CustomText2">

        </TextView>
        <TextView
            android:id="@+id/text_pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pincode"
            style="@style/CustomText2">

        </TextView>
        <TextView
            android:id="@+id/text_address_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/CustomText2"
            android:paddingBottom="15dp"
            >

        </TextView>
    </LinearLayout>


</androidx.cardview.widget.CardView>