<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:padding="8dp"
        android:contentDescription="@string/navigation_header">
    </ImageView>
    <TextView
        android:id="@+id/text_header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/enter_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" >

    </TextView>
    <TextView
        android:id="@+id/text_header_idk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

    </TextView>

</LinearLayout>