<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_margin="10dp"
    android:layout_marginStart="5dp"
    android:gravity="end">
    <Button
        android:id="@+id/button_add_cart"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/box_size"
        android:layout_alignParentStart="true"

        android:background="@drawable/shape_frame"
        android:layout_alignTop="@id/button_add_quantity"
        android:layout_alignBottom="@id/button_add_quantity"
        android:layout_alignStart="@id/button_add_quantity"
        android:layout_alignEnd="@id/button_minus_quantity"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:text="@string/add_to_cart"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="6dp"
        android:visibility="invisible"
        >

    </Button>

    <ImageButton
        android:id="@+id/button_add_quantity"
        android:layout_width="@dimen/box_size"
        android:layout_height="@dimen/box_size"
        android:layout_alignTop="@id/text_Inside"
        android:layout_alignParentStart="true"
        android:background="@drawable/shape_frame1"
        android:padding="2dp"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/colorPrimaryDark"
        android:contentDescription="@string/add_button" />

    <TextView
        android:id="@+id/text_Inside"
        android:layout_width="@dimen/box_size"
        android:layout_height="@dimen/box_size"
        android:layout_toEndOf="@id/button_add_quantity"
        android:background="@drawable/shape_frame"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/initial_text"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/button_minus_quantity"
        android:layout_width="@dimen/box_size"
        android:layout_height="@dimen/box_size"
        android:layout_toEndOf="@id/text_Inside"
        android:background="@drawable/shape_frame1"
        android:padding="2dp"
        android:src="@drawable/ic_baseline_remove_24"
        android:tint="@color/colorPrimaryDark"

        android:contentDescription="@string/minus_button" />
</RelativeLayout>

