<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/simple_background"
    >
    <EditText
        android:id="@+id/edit_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_register_password"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white">
    </EditText>

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_user"
        app:layout_constraintBottom_toTopOf="@id/edit_register_firstName"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_register_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_firstname"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_password"
        app:layout_constraintBottom_toTopOf="@id/edit_register_mobile"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_register_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_mobile_number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_firstName"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_mobile"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>