<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CartActivity">

    <include layout="@layout/tool_bar" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true">

            <TextView
                android:id="@+id/text_no_item_in_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/no_items_in_cart"
                android:textSize="40sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@id/view_price_info"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_price_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_frame"
                app:layout_constraintBottom_toTopOf="@id/button_check_out"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_cart">

                <TextView
                    style="@style/CustomText"
                    android:text="@string/subtotal"
                    app:layout_constraintBottom_toTopOf="@id/text_discount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_sub_total"
                    style="@style/CustomText"
                    android:text="@string/initial_text"
                    app:layout_constraintBottom_toTopOf="@id/text_discount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    style="@style/CustomText"
                    android:text="@string/discount"
                    app:layout_constraintBottom_toTopOf="@id/text_price_total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_sub_total" />

                <TextView
                    android:id="@+id/text_discount"
                    style="@style/CustomText"
                    android:text="@string/initial_text"
                    app:layout_constraintBottom_toTopOf="@id/text_price_total"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_sub_total" />

                <TextView
                    style="@style/CustomText"

                    android:text="@string/total"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_discount" />

                <TextView
                    android:id="@+id/text_price_total"
                    style="@style/CustomText"
                    android:text="@string/initial_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_discount" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_check_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/shape_frame"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/check_out"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_price_info">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
