<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:layout_constrainedHeight="true"
    app:layout_constrainedWidth="true">

    <ImageView
        android:id="@+id/image_product1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:contentDescription="@string/product_image">

    </ImageView>

    <LinearLayout
        android:id="@+id/line_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_product1"
        app:layout_constraintWidth_percent="0.6">

        <TextView
            android:id="@+id/text_product2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:id="@+id/text_product2_mrp_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mrp_price"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/image_product1"
        android:gravity="start"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line_info"
        app:layout_constraintBottom_toTopOf="@id/line_price_info"
        android:textSize="20sp"

        />
    <RelativeLayout
        android:id="@+id/line_price_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/line_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_product1"
        app:layout_constraintWidth_percent="0.6"
        >

        <TextView
            android:id="@+id/text_product2_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/price"
            android:layout_margin="10dp"

            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_alignParentStart="true"

            />

        <include
            layout="@layout/relative_add_cart">
        </include>


    </RelativeLayout>
    <View
        android:id="@+id/line_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">
    </View>


</androidx.constraintlayout.widget.ConstraintLayout>