<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductActivity"
    android:layout_gravity="center"
    app:layout_constrainedWidth="true"
    app:layout_constrainedHeight="true"
    >
    <include layout="@layout/tool_bar" />

    <View
        android:id="@+id/line_green"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/colorButtonGreen"
        app:layout_constraintTop_toBottomOf="@id/toolbar_general"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_product"
        android:paddingHorizontal="0dp"
        >

    </View>
    <LinearLayout
        android:id="@+id/line_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/line_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_blue"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fresh"
            android:textColor="@color/darkGreen"
            android:textSize="25sp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold">
        </TextView>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/primaryGreyLightColor"
            android:layout_marginEnd="5dp">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shop Aisles"
            android:textColor="@color/colorAccent"
            android:textSize="21sp"
            android:layout_marginEnd="5dp">
        </TextView>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/primaryGreyLightColor"
            android:layout_marginEnd="5dp">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reverse a Time"
            android:textColor="@color/colorAccent"
            android:textSize="21sp"
            android:layout_marginEnd="5dp">
        </TextView>

    </LinearLayout>
    <View
        android:id="@+id/line_blue"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/line_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        android:paddingHorizontal="0dp"
        android:layout_marginTop="5dp"
        >

    </View>
    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_des"
        android:text="title"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp">
    </TextView>
    <ImageView
        android:id="@+id/image_des"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_des3"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:paddingHorizontal="15dp">

    </ImageView>
    <TextView
        android:id="@+id/text_des3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="15dp"
        android:text="@string/description">
    </TextView>
    <TextView
        android:id="@+id/text_des2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_des3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedHeight="true"
        android:gravity="start"
        android:autoSizeTextType="uniform"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="15dp"
        android:text="@string/price">
    </TextView>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <include
            layout="@layout/relative_add_cart">
        </include>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>